tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__16384kFluidCompo-5PUj-2T3QZOIq4a33qGXlA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7275355826391455636,
  "prerequisites": [
    9249917096519586060,
    1710
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Final one (so far)",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "16384k Fluid Component",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    9249917096519586060,
    1710
  ],
  "rewards": [],
  "tasks": []
}
